test/expected/large/transfer/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: transfer
    foo.com/duversion: 2.13.3-20190910.1568139026185
    foo.com/version: 2.13.3
  labels:
    app.kubernetes.io/name: transfer
    helm.sh/chart: transfer-2.13.3
  name: transfer
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: transfer
  type: ClusterIP
