test/expected/large/transfer/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: transfer
    foo.com/duversion: 2.13.3-20190910.1568139026185
    foo.com/version: 2.13.3
  labels:
    app.kubernetes.io/name: transfer
    helm.sh/chart: transfer-2.13.3
  name: transfer
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /transfer
    - uri:
        prefix: /transfer/
    route:
    - destination:
        host: transfer.peekay.svc.cluster.local
